--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-refresh": "^0.14.0",
     "styled-components": "^5.3.6",
     "webpack": "^5.74.0"
   },
