--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "os": false
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.1.2",
     "babel-loader": "^8.2.5",
+    "babel-plugin-macros": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
