--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-jest": "^29.1.2",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.2.0",
+    "react-prismazoom": "^3.1.0",
     "react-test-renderer": "^18.2.0",
     "webpack-cli": "^4.10.0"
   }
