add photo uploading; add a scrolling window; update add answer feature; add more answered questions; add add questions;

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "axios": "^1.1.2",
     "babel-loader": "^8.2.5",
     "babel-plugin-macros": "^3.1.0",
+    "cloudinary-react": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "file-system": "^2.2.2",
     "fs": "^0.0.1-security",
+    "i": "^0.3.7",
     "import": "^0.0.6",
     "jquery": "^3.6.1",
     "node-polyfill-webpack-plugin": "^2.0.1",
@@ -29,9 +31,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-list": "^0.8.17",
     "react-refresh": "^0.14.0",
     "react-scripts": "^5.0.1",
-    "react-select": "^5.5.2",
+    "react-select": "^5.5.4",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.6",
     "webpack": "^5.74.0"
