--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/preset-react": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "babel-jest": "^29.1.2",
+    "compression-webpack-plugin": "^10.0.0",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.2.0",
     "react-prismazoom": "^3.1.0",
